[tool.poetry]
name = "chatbot-pdf"
version = "0.1.0"
description = ""
authors = ["Yash Nagraj <pes1202203845@pesu.pes.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
langchain = "^0.3.7"
chromadb = "^0.5.18"
streamlit = "^1.40.1"
langchain-anthropic = "^0.3.0"
voyageai = "^0.3.1"
langchain-community = "^0.3.7"
pypdf = "^5.1.0"
sentence-transformers = "^3.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
